ograisation page alignment fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,10 @@
 .footer{
   background-color: #EC5D82;
 }
+
+.img{
+  border-radius: 4rem;
+}
+
+
+
